# software

./: .gitignore  README.md
backend/: main.cpp
dartwic_operator_console/DARTWIC/: .gitignore  client_info.json  config.json
dartwic_operator_console/DARTWIC/interface/frontend/: index.html
dartwic_operator_console/DARTWIC/interface/frontend/assets/: cssMode-hpv1kbi9.js  freemarker2-BxAJKeuL.js  handlebars-uIkLotu7.js  html-BVA1bMhK.js  htmlMode-BVy2ph7y.js  index-BqK_as6I.css  javascript-CJ1pWLLQ.js  jsonMode-DcK4iGUo.js  liquid-L_lyT39x.js  mdx-CnP24UYQ.js  python-1-hHD09f.js  razor-DBESzWf_.js  tsMode-DusBQUT9.js  typescript-xsYr8nJ0.js  xml-DnZn3omX.js  yaml-tx1-Qn8r.js
dartwic_operator_console/DARTWIC/modules/: hand_controller.yaml  plc.yaml
dartwic_operator_console/DARTWIC/python_scripts/: control.py  python_scripts_config.json  sensors.py  test.py
dartwic_operator_console/DARTWIC/python_scripts/alarms/: checks.py  sensors.py
dartwic_operator_console/DARTWIC/python_scripts/automations/: auto_fill.py
dartwic_operator_console/DARTWIC/python_scripts/other/: fill_sim.py
dartwic_operator_console/DARTWIC/schematics/: FILL_SIM.json  device.json  navbar_schematic_nodes.json  schematic_nodes.json  system.json
dartwic_operator_console/hand_controller_module/: CMakeLists.txt  vcpkg.json
dartwic_operator_console/hand_controller_module/include/: MyModule.h
dartwic_operator_console/hand_controller_module/src/: module_config.yaml  tcp.h
hand_controller/: README.md  platformio.ini
hand_controller/src/: config.cpp  connected_control.cpp  main.cpp  main.h  watchdog_control.cpp
operator_console/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
operator_console/backend/: clientupdates.cpp  clientupdates.h  haos.cpp  haos.h  helperfunctions.cpp  helperfunctions.h  inmemorydatabase.cpp  inmemorydatabase.h  main.cpp  servervariables.h  tcp.cpp  tcp.h  threading.cpp  threading.h  webserver.cpp  webserver.h  websockets.cpp  websockets.h
operator_console/frontend/: index.html  package-lock.json  package.json
operator_console/frontend/src/: index.css  main.jsx  old_index.css
operator_console/frontend/src/components/: App.jsx  AppContext.jsx
operator_console/frontend/src/components/helper_components/: BackendIntegration.jsx
operator_console/frontend/src/components/main_app/: AppSidebar.jsx  DatabaseSearch.jsx  DeviceConnections.jsx  HandMainDisplay.jsx  MainPage.jsx
operator_console/frontend/src/other/: helperfunctions.js  socket.js
